tests/paczka2/big_fuzzy/10585149.err
Error in line 1: DOzkcP A640 71,3
Error in line 13: UdgAQmya A732 68,6
Error in line 24: UdgAQmya A640 50,5
Error in line 33: DOzkcP A640 86,7
Error in line 49: 4xykSWLO A640 38,9
Error in line 55: 4xykSWLO S952 34,8
Error in line 38: DOzkcP A940 30,3
Error in line 64: drA2pbIBtM A940 65,5
Error in line 82: A640 A940 169,36
Error in line 85: UdgAQmya A940 78,5
Error in line 96: 4xykSWLO S952 602,6
Error in line 91: TLN S952 94,3
Error in line 98: 4xykSWLO A640 80,1
Error in line 107: UdgAQmya S952 60,5
Error in line 70: A640 A940 49,6
Error in line 112: 2sHUZ A940 26,2
Error in line 113: drA2pbIBtM A640 70,9
Error in line 115: drA2pbIBtM A732 36,5
Error in line 124: 4xykSWLO A732 0,3
Error in line 132: 2sHUZ A732 -1,4
Error in line 137: ?A*40
Error in line 142: TLN A640 17,5
Error in line 146: drA2pbIBtM A732 2,0
Error in line 147: drA2pbIBtM A640 93,8
Error in line 157: A640 S952 197,42
Error in line 159: UdgAQmya A940 952,7
Error in line 154: A640 S952 62,4
Error in line 150: 2sHUZ A732 381,1
Error in line 167: A640 A940 28,5
Error in line 175: DOzkcP A732 -1,3
Error in line 173: 2sHUZ A640 41,1
Error in line 158: DOzkcP A732 14,8
Error in line 177: DOzkcP A640 34,4
Error in line 180: 2sHUZ S952 8,5
Error in line 184: TLN S952 82,6
Error in line 187: TLN A640 45,4
Error in line 189: 4xykSWLO A940 65,7
Error in line 188: A640 A940 47,6
Error in line 185: DOzkcP A732 6,3
Error in line 197: DOzkcP A940 16,8
Error in line 217: 4xykSWLO A940 39,4
Error in line 218: TLN S952 99,6
Error in line 216: A640 A940 41,2
Error in line 241: DOzkcP A940 83,7
Error in line 246: DOzkcP A640 82,3
